[package]
name = "leetcoderustapi"
version = "1.0.5"
authors = ["Kirill Melkozerov <k.melkozerov@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/1101-1/LeetcodeRustAPI"

description = """
A full-featured Rust API for Leetcode.
"""

readme = "README.md"
categories = ["api-bindings"]
keywords = ["leetcode", "api"]

[lib]
name = "leetcoderustapi"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
thiserror = "1.0.41"
tokio = { version = "1.29.1", features = ["time"] }
